<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/card_corner"
    app:cardElevation="@dimen/card_elevation"
    app:cardUseCompatPadding="true"
    android:id="@+id/item_realty_container">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageview_itemrealty_flat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:transitionName="@string/main_image_transition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.lounah.yarealty.presentation.views.pageindicator.LinePageIndicator
            android:id="@+id/tabindicator_realtyitem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_realty_tablayout"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:foreground="@drawable/all_background_gradient"
            android:transitionName="@string/page_indicator_transition"
            app:gapWidth="@dimen/app_margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectedColor="@color/white"
            app:strokeWidth="3dp"
            app:unselectedColor="@color/greySemiTransparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:id="@+id/item_realty_view_tapHandler_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <View
                android:id="@+id/item_realty_view_tapHandler_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout_itemrealty_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/all_background_gradient_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textview_itemrealty_price"
                android:transitionName="@string/price_transition"
                style="@style/TextStyle.CardPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_medium"
                android:layout_marginEnd="@dimen/app_margin_medium"
                android:layout_marginStart="@dimen/app_margin"
                android:layout_marginTop="@dimen/app_margin"
                android:maxLines="1"
                android:text="@string/stub_price"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textview_itemrealty_businessinfo"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_itemrealty_price"
                android:layout_marginBottom="@dimen/app_margin"
                android:layout_marginEnd="@dimen/app_margin"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin"
                android:layout_marginStart="@dimen/app_margin"
                android:layout_marginTop="4dp"
                android:text="@string/stub_address"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/imagebutton_fragmentrealty_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/textview_itemrealty_businessinfo"
                android:layout_margin="@dimen/app_margin"
                android:background="?selectableItemBackground"
                android:src="@drawable/ic_info" />

            <View
                android:id="@+id/view_itemrealty_info"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/textview_itemrealty_price"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>